; ModuleID = '/home/carl/AnghaBench/linux/drivers/input/rmi4/extr_rmi_f01.c_rmi_driver_package_id_show.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/input/rmi4/extr_rmi_f01.c_rmi_driver_package_id_show.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.device = type { i32 }
%struct.device_attribute = type { i32 }
%struct.rmi_driver_data = type { %struct.TYPE_3__* }
%struct.TYPE_3__ = type { %struct.device }
%struct.f01_data = type { %struct.TYPE_4__ }
%struct.TYPE_4__ = type { i32 }

@PAGE_SIZE = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [11 x i8] c"%04x.%04x\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.device*, %struct.device_attribute*, i8*)* @rmi_driver_package_id_show to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @rmi_driver_package_id_show(%struct.device* %0, %struct.device_attribute* %1, i8* %2) #0 {
  %4 = alloca %struct.device*, align 8
  %5 = alloca %struct.device_attribute*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca %struct.rmi_driver_data*, align 8
  %8 = alloca %struct.f01_data*, align 8
  %9 = alloca i32, align 4
  store %struct.device* %0, %struct.device** %4, align 8
  store %struct.device_attribute* %1, %struct.device_attribute** %5, align 8
  store i8* %2, i8** %6, align 8
  %10 = load %struct.device*, %struct.device** %4, align 8
  %11 = call i8* @dev_get_drvdata(%struct.device* %10)
  %12 = bitcast i8* %11 to %struct.rmi_driver_data*
  store %struct.rmi_driver_data* %12, %struct.rmi_driver_data** %7, align 8
  %13 = load %struct.rmi_driver_data*, %struct.rmi_driver_data** %7, align 8
  %14 = getelementptr inbounds %struct.rmi_driver_data, %struct.rmi_driver_data* %13, i32 0, i32 0
  %15 = load %struct.TYPE_3__*, %struct.TYPE_3__** %14, align 8
  %16 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %15, i32 0, i32 0
  %17 = call i8* @dev_get_drvdata(%struct.device* %16)
  %18 = bitcast i8* %17 to %struct.f01_data*
  store %struct.f01_data* %18, %struct.f01_data** %8, align 8
  %19 = load %struct.f01_data*, %struct.f01_data** %8, align 8
  %20 = getelementptr inbounds %struct.f01_data, %struct.f01_data* %19, i32 0, i32 0
  %21 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %20, i32 0, i32 0
  %22 = load i32, i32* %21, align 4
  store i32 %22, i32* %9, align 4
  %23 = load i8*, i8** %6, align 8
  %24 = load i32, i32* @PAGE_SIZE, align 4
  %25 = load i32, i32* %9, align 4
  %26 = and i32 %25, 65535
  %27 = load i32, i32* %9, align 4
  %28 = ashr i32 %27, 16
  %29 = and i32 %28, 65535
  %30 = call i32 @scnprintf(i8* %23, i32 %24, i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str, i64 0, i64 0), i32 %26, i32 %29)
  ret i32 %30
}

declare dso_local i8* @dev_get_drvdata(%struct.device*) #1

declare dso_local i32 @scnprintf(i8*, i32, i8*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
